--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@
 # Core Flask Framework
 Flask==2.3.3
 Flask-CORS==4.0.0
+flask-session==0.5.0
 
 # Database
 pymongo==4.5.0
@@ -29,7 +30,6 @@ gunicorn==21.2.0
 # Development & Testing
 pytest==7.4.3
 pytest-flask==1.3.0
-python-dotenv==1.0.0
 
 # Logging & Monitoring
 structlog==23.2.0
